updating buttons, due to issue on mobile. Pushing to test on mobile device.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -268,6 +268,9 @@ h1{
     margin-top: 3px;
     
 }
+#mapButton{
+    min-width: 100px;
+}
 /* -_-_-_-_-_-_-_-_-_-_ More Info Section Form _-_-_-_-_-_-_-_-_-_- */
 #moreInfoHeader{
     color: blue;
